--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Documentation/UML/Templates"]
 	path = Documentation/UML/Templates
-	url = git@gitlab.com:diagnoptics/templates/plant_uml.git
+	url = git@github.com:FooBarShebang/plant_uml.git
